tests/Fase2-Semantic/error/t24-increment_over_no_numerical_type_var.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        bool a;
        a += x+b;
        return x;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
